Fix ToC Overlap with Content on Widescreen
The Table of Contents previously overlapped with the main content when on widescreen. This fix prevents overlapping.

The effect can also be seen when zooming out with ctrl+-.

--- a/res/style.css
+++ b/res/style.css
@@ -43,7 +43,7 @@
 	left: 0;
 	top: 0;
 	bottom: 0;
-	width: calc(20vw + 1em);
+	width: calc(10vw + 13em);
 	padding-top: 7em;
 	padding-bottom: 1em;
 	overflow-y: auto;
